--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~11.0.5",
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-statusbar": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
