--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "cordova-plugin-statusbar": "^2.4.3",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
